public class Drown implements SwimBehaviour{
    @Override
    public void swim() {
        System.out.println("On No! I am drowning...");
    }
}
