public class Fly implements FlyBehaviour{
    @Override
    public void fly() {
        System.out.println("I am flying high...");
    }
}
