//Squeak.java

public class Squeak implements QuackBehaviour{
    @Override
    public void quack() {
        System.out.println("Squeakkkk!");
    }
}
