public class SwimWithLegs implements SwimBehaviour{
    @Override
    public void swim() {
        System.out.println("I believe I can Swim...");
    }
}
